# Anisya

./: .gitignore  README.md  http-client.example.env.json  pyproject.toml  reg_cmd.http  requirements.txt
anisya/: main.py
anisya/modules/: animal.py  avatar.py  waifu.py  weather.py
